--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -1,3 +1,5 @@
+body
+  font-family: 'Lato', sans-serif;
 //**************************************** LOGIN ****************************************************
 .bgimage
   background-image url("../imagenes/background_login.jpg")
@@ -5,3 +7,91 @@
 
 .bgimage-inside
   padding-top 37.36%
+
+//*************************************** NAVAR *****************************************************
+.navbar-fastwork
+  background-color #273b47
+  border-radius 0
+
+.navbar-nav>li>a
+  padding 5px 15px
+
+  &:hover
+    background-color #273b47
+
+.navbar-brand
+  padding 5px 15px
+
+.navbar-brand > img
+  height 40px
+
+.avatar img
+  height 40px
+  border-radius 50%
+
+.avatar a
+  color white
+
+.nav .open>a, .nav .open>a:focus, .nav .open>a:hover
+  background-color #273b47
+
+.dropdown-menu
+  width: 320px !important
+  margin-right 20px
+  background-color #273b47
+  padding 0
+
+.dropdown-menu a
+  white-space normal
+
+.dropdown-menu > li
+  position relative
+
+.dropdown-menu > li > a >span
+  padding 0 5px
+
+.dropdown-menu li > a
+  color white
+  padding 10px
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus
+  color white
+  background-image none !important
+  background-color #ff4700
+
+//**************************************** BANNER **********************************************************************
+background-linear-gradient(direction,color-stop1,color-stop2,url-image)
+  background -webkit-linear-gradient(direction,color-stop1,color-stop1),url-image
+  background -moz-linear-gradient(direction,color-stop1,color-stop1),url-image
+  background -ms-linear-gradient(direction,color-stop1,color-stop1),url-image
+  background -o-linear-gradient(direction,color-stop1,color-stop1),url-image
+  background linear-gradient(direction,color-stop1,color-stop1),url-image
+
+.banner
+  background-linear-gradient(top,rgba(0,0,0,0.6),rgba(0,0,0,8),url("../imagenes/banner.jpg"))
+  background-position center center
+  background-repeat no-repeat
+  background-attachment fixed
+  background-size cover
+  height 250px
+  margin-top 50px
+
+.banner > .row
+  margin-top 25px
+
+.avatar-account
+  height 200px
+  width 200px
+  border-radius 50%
+
+.fullname-account
+  color white
+  font-size 3em
+
+.username-account
+  color white
+  font-size 16px
+
+.cuenta
+  color white
+  padding 0 5px
