--- a/templates/home.jade
+++ b/templates/home.jade
@@ -20,8 +20,8 @@ html(lang="es")
                             img(src="{% static 'imagenes/logo.png'%}",class="img-responsive center-block")
 
                     div(class="row")
-                        div(class="col-lg-8 col-lg-offset-2")
-                            p(class="text-center font-18") Puedes registrarte o iniciar sesión usando redes sociales
+                        div(class="col-lg-10 col-lg-offset-1")
+                            p(class="text-center font-title") Inicia sesión con
                             div(class="redes")
                                 a(href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}")
                                     div(class="col-md-3 facebook text-center")
@@ -40,33 +40,27 @@ html(lang="es")
                                         i(class="fa fa-linkedin fa-2x")
                                         p(class="nombre-linkedin") LinkedIn
                     div(class="row")
-                        div(class="col-lg-12 text-center")
-                            p(class="font-18") O registrate e inicia sesión de forma tradicional
-                    div(class="row")
-                        div(class="col-xs-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3")
-                            form(class="login-form",id="form_login",method="post",action="{% url 'django.contrib.auth.views.login' %}")
-                                |{%csrf_token%}
-                                input(type="text",placeholder="Usuario",id="idUsername",name="username",data-toggle="tooltip",data-placement="right",title="Usuario")
-                                input(type="password",placeholder="Contraseña",id="password",name="password",data-toggle="tooltip",data-placement="right",title="Password")
-                                |{% if form.errors %}
-                                p(class="text-center") El usuario y la contraseña que has introducido no coinciden. Porfavor, inténtalo de nuevo.
-                                |{% endif %}
-                                div(class="botones")
-                                    a(href="javascript:{}",onclick="document.getElementById('form_login').submit(); return false;")
-                                        div(class="col-lg-4 iniciar")
-                                            p Iniciar sesión
-                                    a(href="#")
-                                        div(class="col-lg-4 registrar")
-                                            p Registrarme
-                                    a(href="#")
-                                        div(class="col-lg-4 recordar")
-                                            p Recuperar
-                    div(class="row")
-                        div(class="col-lg-12 text-center copyrigth")
-                            p &copy 2016
+                        div(class="col-lg-12 text-center font-title-2")
+                            p(class="inline") Prefieres iniciar sesión de manera tradicional?&nbsp
+                            a(href="#",class="inline") Registrate&nbsp
+                            p(class="inline") o&nbsp
+                            a(href="#",class="inline") Inicia sesión
+                    div(class="row text-center")
+                        div(class="col-lg-10 col-lg-offset-1 text-text-justify")
+                            p
+                                |Fastwork Colombia solamente utiliza las cuentas de &regFacebook, &regTwitter, &regGoogle y &regLinkedIn
+                                | para generar usuarios a fin de acceder a la plataforma. Facilitamos tu registro y es una
+                                | cuenta menos para recordar.
+                    div(class="row text-center")
+                        div(class="col-lg-10 col-lg-offset-1 text-text-justify")
+                            p(class="inline") Valoramos tu&nbsp
+                            a(href="#") privacidad&nbsp
+                            p(class="inline") como si fuera la nuestra y te invitamos a conocer los&nbsp
+                            a(class="inline") Términos de Servicio.
+
         | {% if user.is_authenticated %}
-        |Welcome back {{ user.get_full_name }}.
-        a(href="{% url 'user-logout' %}") Logout
+        script
+            | window.location.href = "/ofertas/";
         |{% endif %}
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
         script(src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js")
