Form personal data

--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -35,26 +35,26 @@ body
 .nav .open>a, .nav .open>a:focus, .nav .open>a:hover
   background-color #273b47
 
-.dropdown-menu
+.user-options
   width: 320px !important
   margin-right 20px
   background-color #273b47
   padding 0
 
-.dropdown-menu a
+.user-options a
   white-space normal
 
-.dropdown-menu > li
+.user-options > li
   position relative
 
-.dropdown-menu > li > a >span
+.user-options > li > a >span
   padding 0 5px
 
-.dropdown-menu li > a
+.user-options li > a
   color white
   padding 10px
 
-.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus
+.user-options > li > a:hover, .user-options > li > a:focus
   color white
   background-image none !important
   background-color #ff4700
@@ -95,3 +95,10 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
 .cuenta
   color white
   padding 0 5px
+
+legend
+  padding 10px 0
+  font-size 4rem
+
+.form-perfil
+  margin-bottom 20px
