--- a/templates/base.jade
+++ b/templates/base.jade
@@ -22,7 +22,7 @@ html(lang="es")
                 div(class="navbar-header")
                     button(type="button",class="navbar-toggle collapsed",data-toggle="collapse",data-target="#fastwork-navbar",aria-expanded="false")
                         span(class="sr-only") Menu
-                        span(class="fa fa-bars")
+                        span(class="fa fa-bars",style="color:white;")
                     a(class="navbar-brand",rel="home",href="#",title="Fast Work Colombia")
                         img(src="{% static 'imagenes/logo-2.png' %}")
                 div(class="collapse navbar-collapse",id="fastwork-navbar")
@@ -50,4 +50,5 @@ html(lang="es")
         script(src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js",integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS",crossorigin="anonymous")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js")
+        script(src="https://cdn.jsdelivr.net/jquery.chained/0.9.9/jquery.chained.remote.js")
         block extra_script
