--- a/templates/ofertas/inicio.jade
+++ b/templates/ofertas/inicio.jade
@@ -1,3 +1,11 @@
 extends ../base
 block titulo
     |Ofertas
+
+block extra_script
+    script
+            |$(document).ready(function() {
+            |if ($('#identificacion').val() == "None"){
+            |$.notify({icon: 'glyphicon glyphicon-user',message: 'Actualiza la información de tu perfil, haz click aqui!',url: "/accounts/"},{type: 'warning', url_target: "_self" ,placement: {from: "top",align: "center"}});
+            |}
+            |});
