--- a/templates/base.jade
+++ b/templates/base.jade
@@ -30,7 +30,7 @@ html(lang="es")
                     ul(class="nav navbar-nav navbar-right")
                         li(class="dropdown avatar")
                             a(href="#",class="dropdown-toggle",data-toggle="dropdown",role="button",aria-haspopup="true",aria-expanded="false")
-                                img(src='{{MEDIA_URL}}{{user.photo}}')
+                                img(src='{{user.photo}}')
                                 span(class="caret")
                             ul(class="dropdown-menu user-options")
                                 li
