City update view json response

--- a/templates/accounts/perfil.html
+++ b/templates/accounts/perfil.html
@@ -12,6 +12,6 @@ locale: 'es'
 });
 $("#id_ciudad").remoteChained({
        parents : "#id_departamento",
-       url : "/rest/"
+       url : "/rest/departamentos/"
 });
 });</script></body></html>
