--- a/templates/accounts/perfil.jade
+++ b/templates/accounts/perfil.jade
@@ -46,6 +46,6 @@ block extra_script
         |});
         |$("#id_ciudad").remoteChained({
         |        parents : "#id_departamento",
-        |        url : "/rest/"
+        |        url : "/rest/departamentos/"
         |});
         |});
