AWS initial conf

--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -128,7 +128,10 @@ background-linear-gradient(direction,color-stop1,color-stop2,url-image)
 
 legend
   padding 10px 0
-  font-size 4rem
+  font-size 3rem
+
+label
+  font-size 1.5rem
 
 .form-perfil
   margin-bottom 20px
@@ -148,7 +151,7 @@ legend
 .registro
   background-color #d9edf7
   border-radius 10px
-  padding 10px
+  padding 10px 10px 15px 20px
   margin 10px
 
 .registro p
@@ -166,3 +169,8 @@ legend
   float right
   display inline-block
   padding 5px
+
+
+.ezdz-dropzone
+  width 50%
+  height 100px
