--- a/static/css/base.css
+++ b/static/css/base.css
@@ -137,7 +137,10 @@ body {
 }
 legend {
   padding: 10px 0;
-  font-size: 4rem;
+  font-size: 3rem;
+}
+label {
+  font-size: 1.5rem;
 }
 .form-perfil {
   margin-bottom: 20px;
@@ -159,7 +162,7 @@ legend {
 .registro {
   background-color: #d9edf7;
   border-radius: 10px;
-  padding: 10px;
+  padding: 10px 10px 15px 20px;
   margin: 10px;
 }
 .registro p {
@@ -178,4 +181,8 @@ legend {
   float: right;
   display: inline-block;
   padding: 5px;
+}
+.ezdz-dropzone {
+  width: 50%;
+  height: 100px;
 }
